main HTML and style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1 class="title">Personal Website</h1>
     
        <header>
-        <nav>
+        <nav class="header">
             <div class="name">DarbyBehnken</div>
             <input type="checkbox" id="click">
             <label for="click" class="menu-btn">
@@ -16,12 +16,25 @@
             </label>
             <ul>
               <li><a class="active" href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Info</a></li>
-              <li><a href="#">Hobbies</a></li>
+              <li><a href="#About">About</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </nav>
         </header>
+
+        <div id="About">
+            <img src="nickphoto.JPEG" alt="Picture of me by a waterfall">
+            <h2>About Me</h2>
+            <p class="disclaimer">I am into</p>
+            <ul class="Into">
+                <li>Photography</li>
+                <li>Cliff Diving</li>
+                <li>Sky Diving</li>
+                <li>Camping</li>
+                <li>Gaming</li>
+                <li>And Anything That Gives Me Adrenaline</li>
+            </ul>
+        </div>
+
     </body>
 </html>
