--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="About">
             <img id="photo" src="nickphoto.JPEG" alt="Picture of me by a waterfall">
             <script src="index.js"></script>
-            <h2>About Me</h2>
+            <h2>^Click the photo above me^</h2>
             <p class="disclaimer">I am into</p>
             <ul class="Into">
                 <li>Photography</li>
